# testatrice

./: .gitignore  README.md  mock_mailserver.py  pyproject.toml  testatrice-database.dockerfile  testatrice-mailserver.dockerfile  testatrice-server.dockerfile  testatrice.ini  testatrice.ini.envsubst-template  testatrice.sh  testatrice.sql  testatrice.sql.envsubst-template
testatrice/: __init__.py  __main__.py  testatrice.py
testatrice/dockerfiles/: testatrice-database.dockerfile  testatrice-mailserver.dockerfile  testatrice-server-github.dockerfile  testatrice-server-local.dockerfile  testatrice-server.dockerfile
testatrice/dockerfiles/resources/: mock_mailserver.py  server_entry_point.sh
testatrice/templates/: testatrice.ini.j2  testatrice.sql.j2
