[project]
name = "testatrice"
version = "0.1.0"
maintainers = [{ name = "LumaddT" }]
description = "Start servatrice instances in Python."
readme = { file = "README.txt", content-type = "text/markdown" }
license = "GPL-2.0"
keywords = ["cockatrice",
    "servatrice",
    "games",
    "test",
]
requires-python = ">=3.10"
classifiers = ["Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]

dependencies = ["podman>=5.6.0",
    "faker>=37.8.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = ["black>=25.9.0",
    "isort>=6.0.1",
]
